# logix

./: CHANGELOG.md  Cargo.toml  README.md
src/: build.rs  file_utils.rs  find.rs  main.rs  path_utils.rs  print_utils.rs  query.rs  token.rs
src/index/: builder.rs  header_section.rs  lines_section.rs  mod.rs  reader.rs  words_section.rs
src/index/lines_reader/: all.rs  all_tokens.rs  any.rs  any_token.rs  mod.rs  token.rs  word.rs
