[package]
name = "qx"
version = "0.1.1"
edition = "2024"
description = "Eazy to use log analyzer"
repository = "https://github.com/melsomino/qx"
license = "MIT OR Apache-2.0"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
colorize = "0.1.0"
tar = "0.4.44"
xz2 = "0.1.7"
flate2 = "1.1.0"
zstd = "0.13.3"
